--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>エラーページ</title>
+  <title>>Page NotFound</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -32,7 +32,6 @@
            <br>
             <div><img src="/images//fire.png"/>
            </div>
-            早く帰らないとおいたするよ...
              <div class="ok">
              </div>
             <div class="foot">
